# context

./: README.md  pyproject.toml
diagrams/: quality_mind_map.mmd  rag_sequence_diagram.mmd  simplified_indexing_flowchart.mmd  simplified_rag_flowchart.mmd
diagrams/code_related/: chunking_strategy_class_diagram.mmd  component_diagram_rag_pipeline.puml  generating_strategy_class_diagram.mmd  loading_strategy_class_diagram.mmd  persisting_strategy_class_diagram.mmd  quality_strategy_diagram.mmd  retrieving_strategy_class_diagram.mmd
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
scripts/dev/: set_dev_env.fish  set_dev_env.sh  set_dev_env.zsh
src/rag_pipeline/: __init__.py  __main__.py  chunking.py  generating.py  loading.py  persisting.py  pipeline.py  quality_metrics.py  retrieving.py
src/rag_pipeline/mad_skillz/: __init__.py  context_ranking_listwise.py  lm_vs_lm.py  self_check.py
src/tests/: test_chunking.py  test_loading.py
src/tests/resources/documents/: economic_policy.html  economic_policy.md  economic_policy.txt  json_example.json
